# vtm_prac_23_24

./: README.md
strassen/: CMakeLists.txt  main  main.cpp  main.f90  matrix.h  test.cpp
strassen/include/: matrix.h  strassen.h
strassen/old/1.0/: strass1.0.cpp
strassen/old/1.0/tests1/: strass=128.csv  strass=2.csv  strass=32.csv  strass=64.csv
strassen/old/1.0/tests2/: 2strass=128.csv  2strass=16.csv  2strass=256.csv  2strass=32.csv  2strass=512.csv  2strass=8.csv
strassen/old/2.0/: main.cpp  matrix.cpp
strassen/old/2.0/tests/: strass=16.csv  strass=2.csv  strass=32.csv  strass=4.csv  strass=512.csv  strass=64.csv
strassen/old/3.0/: CMakeLists.txt  matrix.cpp  matrix.h
strassen/old/3.0/tests/: strass=128.csv  strass=16.csv  strass=2.csv  strass=256.csv  strass=32.csv  strass=4.csv  strass=512.csv  strass=64.csv  strass=8.csv
strassen/results/: strass=128.csv  strass=16.csv  strass=2.csv  strass=256.csv  strass=32.csv  strass=4.csv  strass=512.csv  strass=64.csv  strass=8.csv
strassen/src/: CMakeLists.txt  matrix.cpp  strassen.cpp  strassen.f90
strassen/test/: CMakeLists.txt  test.cpp  test.f90
strassen/tests/: strass=128.csv  strass=16.csv  strass=256.csv  strass=32.csv  strass=4.csv  strass=512.csv  strass=64.csv  strass=8.csv
strassen/tests1/: strass=16.csv  strass=256.csv  strass=4.csv  strass=512.csv  strass=8.csv
strassen/tests2/: 2strass=2.csv  2strass=4.csv  2strass=64.csv
